--- a/action.yml
+++ b/action.yml
@@ -1,21 +1,11 @@
-name: 'Hello World'
-description: 'Greet someone'
 inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet v1'
-    required: true
-    default: 'World'
-outputs:
-  random-number:
-    description: "Random number"
-    value: ${{ steps.random-number-generator.outputs.random-id }}
+  name: 
+    description: 'Your name'
+    default: 'No name provided'
 runs:
   using: "composite"
-  steps:
-    - run: echo Hello ${{ inputs.who-to-greet }}.
+  steps: 
+    - run: echo Hello ${{ inputs.name }}.
       shell: bash
-    - id: random-number-generator
-      run: echo "::set-output name=random-id::$(echo $RANDOM)"
-      shell: bash
-    - run: ${{ github.action_path }}/goodbye.sh
-      shell: bash
+    - run: echo "Nice to meet you!"
+      shell: pwsh
