--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,14 @@
 inputs:
   name: 
-    description: 'Your name'
-    default: 'No name provided'
+    description: 'Setup Laravel'
 runs:
   using: "composite"
   steps: 
-    - run: echo Hello ${{ inputs.name }}.
-      shell: bash
-    - run: echo "Nice to meet you!"
-      shell: pwsh
+    - name: Copy .env
+      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+    - name: Install Dependencies
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+    - name: Generate key
+      run: php artisan key:generate
+    - name: Directory Permissions
+      run: chmod -R 777 storage bootstrap/cache
